Corrected all items except parsing from last review
Signed-off-by: Matt Myers <mmyers75@icloud.com>